--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -101,7 +101,7 @@ bind_to_address		"127.0.0.1"
 # (available from <http://www.willwap.co.uk/Programs/vbrfix.php>), at which
 # point gapless MP3 playback can be enabled.
 #
-#gapless_mp3_playback			"yes"
+gapless_mp3_playback			"yes"
 #
 # Setting "restore_paused" to "yes" puts MPD into pause mode instead
 # of starting playback after startup.
@@ -206,15 +206,15 @@ input {
 #
 # An example of an ALSA output:
 #
-#audio_output {
-#	type		"alsa"
-#	name		"My ALSA Device"
+# audio_output {
+# 	type		"alsa"
+# 	name		"My ALSA Device"
 ##	device		"hw:0,0"	# optional
 ##	mixer_type      "hardware"	# optional
 ##	mixer_device	"default"	# optional
 ##	mixer_control	"PCM"		# optional
 ##	mixer_index	"0"		# optional
-#}
+# }
 #
 # An example of an OSS output:
 #
@@ -278,10 +278,10 @@ input {
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
 #
-audio_output {
-	type		"pulse"
-	name		"pulse audio"
-        mixer_type      "software"
+ audio_output {
+ 	type		"pulse"
+ 	name		"My pulse audio"
+#         mixer_type      "software"
 ##	server		"remote_server"		# optional
 ##	sink		"remote_server_sink"	# optional
 }
@@ -411,3 +411,11 @@ audio_output {
 #}
 #
 ###############################################################################
+
+
+audio_output {
+    type                    "fifo"
+    name                    "my_fifo"
+    path                    "/tmp/mpd.fifo"
+    format                  "44100:16:2"
+}
